feat(sj_1.0.0): 格式化代码