@@ -130,8 +130,8 @@ public class StreamUtils {
             return MapUtil.newHashMap();
         }
         return collection
-            .stream().filter(Objects::nonNull)
-            .collect(Collectors.groupingBy(key, LinkedHashMap::new, Collectors.toList()));
+                .stream().filter(Objects::nonNull)
+                .collect(Collectors.groupingBy(key, LinkedHashMap::new, Collectors.toList()));
     }
 
     /**
@@ -151,8 +151,8 @@ public class StreamUtils {
             return MapUtil.newHashMap();
         }
         return collection
-            .stream().filter(Objects::nonNull)
-            .collect(Collectors.groupingBy(key1, LinkedHashMap::new, Collectors.groupingBy(key2, LinkedHashMap::new, Collectors.toList())));
+                .stream().filter(Objects::nonNull)
+                .collect(Collectors.groupingBy(key1, LinkedHashMap::new, Collectors.groupingBy(key2, LinkedHashMap::new, Collectors.toList())));
     }
 
     /**
@@ -172,8 +172,8 @@ public class StreamUtils {
             return MapUtil.newHashMap();
         }
         return collection
-            .stream().filter(Objects::nonNull)
-            .collect(Collectors.groupingBy(key1, LinkedHashMap::new, Collectors.toMap(key2, Function.identity(), (l, r) -> l)));
+                .stream().filter(Objects::nonNull)
+                .collect(Collectors.groupingBy(key1, LinkedHashMap::new, Collectors.toMap(key2, Function.identity(), (l, r) -> l)));
     }
 
     /**
@@ -191,11 +191,11 @@ public class StreamUtils {
             return CollUtil.newArrayList();
         }
         return collection
-            .stream()
-            .map(function)
-            .filter(Objects::nonNull)
-            // 注意此处不要使用 .toList() 新语法 因为返回的是不可变List 会导致序列化问题
-            .collect(Collectors.toList());
+                .stream()
+                .map(function)
+                .filter(Objects::nonNull)
+                // 注意此处不要使用 .toList() 新语法 因为返回的是不可变List 会导致序列化问题
+                .collect(Collectors.toList());
     }
 
     /**
@@ -213,10 +213,10 @@ public class StreamUtils {
             return CollUtil.newHashSet();
         }
         return collection
-            .stream()
-            .map(function)
-            .filter(Objects::nonNull)
-            .collect(Collectors.toSet());
+                .stream()
+                .map(function)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
     }
 
 
@@ -273,7 +273,7 @@ public class StreamUtils {
             return CollUtil.newHashSet();
         }
         return collection.stream().map(mapper).filter(Objects::nonNull)
-            .flatMap(function).filter(Objects::nonNull).collect(Collectors.toSet());
+                .flatMap(function).filter(Objects::nonNull).collect(Collectors.toSet());
     }
 
     /**
@@ -291,7 +291,7 @@ public class StreamUtils {
             return CollUtil.newHashSet();
         }
         return collection.stream().filter(Objects::nonNull)
-            .flatMap(function).filter(Objects::nonNull).collect(Collectors.toSet());
+                .flatMap(function).filter(Objects::nonNull).collect(Collectors.toSet());
     }
 
 
